--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:create": "npm run typeorm -- migration:create ./migrations/%npm_config_name%",
     "migration:run": "npm run typeorm migration:run -- -d ./src/config/database.config.ts",
-    "migration:generate": "npm run typeorm -- -d ./src/config/database.config.ts migration:generate ./src/migrations/$npm_config_name",
-    "migration:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
-    "migration:revert": "npm run typeorm -- -d ./src/config/typeorm.ts migration:revert"
+    "migration:revert": "npm run typeorm migration:revert -- -d ./src/config/database.config.ts "
   },
   "dependencies": {
     "@nestjs/common": "^10.4.15",
